--- a/src/css/plugin.scss
+++ b/src/css/plugin.scss
@@ -24,6 +24,14 @@
       line-height: 75px;
       color: white;
       font-size: 28px;
+      &.word{
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+        padding: 11.5px 5px;
+        line-height: 25px;
+        font-size: 12px;
+      }
     }
     input[type='file']{
       width: 100%;
@@ -51,7 +59,16 @@
       cursor: pointer;
       z-index: 2;
       .iconfont{
+        line-height: 75px;
         font-size: 24px;
+      }
+      .word{
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+        padding: 11.5px 5px;
+        line-height: 25px;
+        font-size: 12px;
       }
     }
   }
