--- a/src/css/plugin.scss
+++ b/src/css/plugin.scss
@@ -31,6 +31,7 @@
         padding: 11.5px 5px;
         line-height: 25px;
         font-size: 12px;
+        font-style:normal
       }
     }
     input[type='file']{
@@ -69,6 +70,7 @@
         padding: 11.5px 5px;
         line-height: 25px;
         font-size: 12px;
+        font-style:normal
       }
     }
   }
