--- a/src/css/plugin.scss
+++ b/src/css/plugin.scss
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import url("http://at.alicdn.com/t/font_450163_1308abj4z7wdbo6r.css");
+@import url("http://at.alicdn.com/t/font_450163_yfe7jxoe8zrggb9.css");
 
 .upload{
   padding: 0;
@@ -12,6 +12,11 @@
     display: inline-block;
     position: relative;
     vertical-align: top;
+    text-align: center;
+    .iconfont{
+      font-size: 32px;
+      line-height: 75px;
+    }
     .del{
       position: absolute;
       right: 0;
